# ppl.kernel.cpu

./: .gitignore  CMakeLists.txt
.github/workflows/: common_linux_aarch64.yml  common_linux_x86_64.yml  common_windows_x86_64.yml
cmake/: arm.cmake  deps.cmake  riscv.cmake  x86.cmake
include/ppl/kernel/arm_server/conv2d/neon/: conv2d.h
include/ppl/kernel/riscv/common/: conv2d.h  fc.h  options.h
include/ppl/kernel/riscv/fp16/: conv2d.h  conv_transpose.h
include/ppl/kernel/riscv/fp32/: conv2d.h  conv_transpose.h
include/ppl/kernel/x86/fp32/: leaky_relu.h  matmul.h  neg.h
include/ppl/kernel/x86/int64/: neg.h
src/ppl/kernel/arm_server/common/: math_neon.h
src/ppl/kernel/riscv/fp16/arithmetic/: arithmetic_broadcast_n8cx_fp16.h  arithmetic_broadcast_ndarray_fp16.h  arithmetic_eltwise_fp16.h
src/ppl/kernel/riscv/fp16/averagepool2d/: averagepool2d_n8chw_1x16_fp16.cpp
src/ppl/kernel/riscv/fp16/maxpool2d/: maxpool2d_n8chw_1x16_fp16.cpp
src/ppl/kernel/riscv/fp32/arithmetic/: arithmetic_broadcast_n4cx_fp32.h  arithmetic_broadcast_ndarray_fp32.h  arithmetic_eltwise_fp32.h
src/ppl/kernel/riscv/fp32/averagepool2d/: averagepool2d_n4cx_1x16_fp32.cpp
src/ppl/kernel/riscv/fp32/maxpool2d/: maxpool2d_n4cx_1x16_fp32.cpp
src/ppl/kernel/riscv/int64/arithmetic/: arithmetic_broadcast_n2cx_int64.h  arithmetic_broadcast_ndarray_int64.h  arithmetic_eltwise_int64.h
src/ppl/kernel/x86/common/neg/: neg_common.h
src/ppl/kernel/x86/common/non_zero/: non_zero_common.h
src/ppl/kernel/x86/fp32/conv/: conv_fp32.cpp
src/ppl/kernel/x86/fp32/conv2d/: conv2d_fp32.cpp
test/: test_conv2d.cpp
(+28 files in other folders)
